--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "google-spreadsheet": "^4.1.1",
     "googleapis": "^105.0.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
